@@ -1,6 +1,5 @@
 package com.remousses.app.modular.component;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
@@ -12,6 +11,6 @@ public class ModelMapperCustomize extends ModelMapper {
         return source
                 .stream()
                 .map(element -> this.map(element, targetClass))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
